# nibblet

./: Cargo.toml  LICENSE-MIT  README.md  clippy.toml
.github/workflows/: rust.yml
src/: de.rs  lib.rs  ser.rs  tests.rs
src/de/: enum.rs  struct.rs
src/de/enum/: tests.rs
src/de/struct/: tests.rs
src/ser/: enum.rs  struct.rs
src/ser/enum/: tests.rs
src/ser/struct/: tests.rs
src/tests/: objects.rs  utils.rs
src/tests/objects/: enum_named_field.rs  enum_unnamed_field.rs  enum_variant_types.rs  struct_named_field.rs  struct_unnamed_field.rs  test.rs
